--- a/client/src/components/SideBar.css
+++ b/client/src/components/SideBar.css
@@ -1,5 +1,34 @@
+@import url("../App.css");
+@import url("../App.css");
+
 .SideBar {
   width: 25vw;
   background: grey;
   height: 100vh;
+}
+
+.title {
+  font-family: var(--header-font);
+  font-size: 35px;
+  color: lightblue;
+  font-weight: bold;
+  margin: 20px;
+}
+
+.subtitle {
+  font-family: var(--header-font);
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px 20px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+li {
+  cursor: pointer;
+  border: solid 1px #777;
 }
